--- a/contracts/lib/cairo_contracts/docs/modules/ROOT/pages/extensibility.adoc
+++ b/contracts/lib/cairo_contracts/docs/modules/ROOT/pages/extensibility.adoc
@@ -21,7 +21,7 @@ Therefore writing complex smart contracts is a delicate task.
 
 One of the best approaches to minimize introducing bugs is to reuse existing, battle-tested code, a.k.a.
 using libraries.
-But code reutilization in StarkNet's smart contracts is not easy:
+But code reutilization in Starknet's smart contracts is not easy:
 
 * Cairo has no explicit smart contract extension mechanisms such as inheritance or composability.
 * Using imports for modularity can result in clashes (more so given that arguments are not part of the selector), and lack of overrides or aliasing leaves no way to resolve them.
