--- a/docs/tutorial/wallet-app.mdx
+++ b/docs/tutorial/wallet-app.mdx
@@ -9,10 +9,18 @@ flutter create wallet_app
 Run it locally with `flutter run` to make sure it is properly configured.
 
 2. Create a `contracts` folder and setup a scarb project.
-   - Install Rust
-     ```
-     rustup override set stable && rustup update
-     ```
-   - [Install scarb](https://docs.swmansion.com/scarb/docs/install) and run `scarb --version` to make sure it is working properly
-   - Run `scarb new contracts` in `wallet_app/`
-   - Run `scarb build` in `contracts/`
+
+- Install Rust
+  ```
+  rustup override set stable && rustup update
+  ```
+- [Install scarb](https://docs.swmansion.com/scarb/docs/install) and run `scarb --version` to make sure it is working properly
+- Run `scarb new contracts` in `wallet_app/`
+- Run `scarb build` in `contracts/`
+
+3. Run starknet locally with devnet
+
+- `poetry new devnet`
+- `cd devnet`
+- `poetry add starknet-devnet`
+- `poetry run starknet-devnet`
