Add melos scripts

--- a/docs/how-to-contribute.mdx
+++ b/docs/how-to-contribute.mdx
@@ -22,10 +22,11 @@ git clone git@github.com:focustree/starknet.dart.git
 dart pub global activate melos
 ```
 
-We use melos to manage our monorepo. You can:
+We use melos to manage our monorepo:
 
-- Run `melos run test` to run tests
-- Run `melos bs` to get all packages deps
+- Run `melos bs` to setup deps
+- Run `melos format` to format all packages
+- Run `melos test` to run tests
 - Run `melos publish` to publish all packages
 
 4. Fetch all dependencies:
