--- a/docs/how-to-contribute.mdx
+++ b/docs/how-to-contribute.mdx
@@ -14,7 +14,7 @@ But web3 mainstream adoption won't happen unless decentralized applications go t
 
 If you want to contribute to the web3 adoption and more specifically Starknet one, then you probably **can't have more impact than working on this SDK** that will be used by the majority of Flutter dApps on Starknet!
 
-### You want to become a core contributor
+### To become a core contributor
 
 After a few qualitative contributions, we'll probably offer you to join the core team to become a maintainer of the project and get paid for your work.
 
