--- a/docs/how-to-contribute.mdx
+++ b/docs/how-to-contribute.mdx
@@ -6,7 +6,7 @@ The [Starknet nodes](https://github.com/eqlabs/pathfinder/blob/06ea631557937d431
 
 The goal of the project is thus to build a bridge between dart applications and Starknet, while staying consistent with the common abstractions used in other blockchain SDKs (see [ethers.js](https://docs.ethers.io/v5/)).
 
-## Why contributing to starknet.dart?
+## Why contribute to starknet.dart?
 
 Starknet is a revolution in the web3 world: it allows to [scale Ethereum](https://docs.ethhub.io/ethereum-roadmap/layer-2-scaling/zk-rollups/) and offers the best UX one can dream of on a blockchain thanks to unique features like [account abstraction](https://www.argent.xyz/blog/wtf-is-account-abstraction/) or [session keys](https://github.com/dontpanicdao/starknet-burner).
 
