--- a/docs/how-to-contribute.mdx
+++ b/docs/how-to-contribute.mdx
@@ -53,13 +53,7 @@ We use melos to manage our monorepo:
 melos bootstrap
 ```
 
-<<<<<<< HEAD
 5. Set up your starknet dev env. First [install asdf](https://asdf-vm.com/guide/getting-started.html), then run:
-||||||| parent of 3929d90 (Use starknet-devnet-rs instead of katana)
-5. Setup your starknet dev env. First [install asdf](https://asdf-vm.com/guide/getting-started.html), then run:
-=======
-5. We setup all important params via env vars (ex: `STARKNET_RPC` ). Make sure to source the env vars before running any command:
->>>>>>> 3929d90 (Use starknet-devnet-rs instead of katana)
 
 ```sh
 source .env.devnet
@@ -110,3 +104,7 @@ Tools need to be at the right version to avoid any incompability:
 - [Scarb](https://github.com/software-mansion/scarb/releases): `2.6.2`
 - [Starknet Devnet](https://github.com/0xSpaceShard/starknet-devnet-rs/releases): `0.5.0`
 - [Starkli](https://github.com/xJonathanLEI/starkli/releases): `0.2.9`
+- [Starkli](https://github.com/xJonathanLEI/starkli/releases): `0.2.9`
+- [Sierra](https://docs.starknet.io/documentation/starknet_versions/version_notes/): `1.5.0`
+- [Starknet](https://docs.starknet.io/documentation/starknet_versions/version_notes/): `0.13.1.1`
+- [Starknet RPC](https://github.com/starkware-libs/starknet-specs/blob/master/api/starknet_api_openrpc.json): `0.7.1`
