--- a/docs/examples/starknet-counter.mdx
+++ b/docs/examples/starknet-counter.mdx
@@ -11,15 +11,15 @@ In this tutorial, we will build a Starknet Counter example to learn how to inter
 
 ## I. Prerequisites.
 
-- Install scarb 2.3.1
+- Install scarb 2.8.4
 ```sh
-asdf install scarb 2.3.1
-asdf global scarb 2.3.1
+asdf install scarb 2.8.4
+asdf global scarb 2.8.4
 ```
-- Install starknet-devnet 0.0.7
+- Install starknet-devnet 0.2.0
 ```sh
-asdf install starknet-devnet 0.0.7
-asdf global starknet-devnet 0.0.7
+asdf install starknet-devnet 0.2.0
+asdf global starknet-devnet 0.2.0
 ```
 - Install starkli 0.3.5
 ```sh
@@ -91,7 +91,7 @@ mod Counter {
         self._count.write(1);
     }
 
-    #[external(v0)]
+    #[abi(embed_v0)]
     impl CounterImpl of super::ICounter<ContractState> {
         
         fn increment(ref self: ContractState,) {
@@ -127,8 +127,18 @@ starknet = ">=2.2.0"
 
 [[target.starknet-contract]]
 ```
+5. Compile the Cairo contract:
+```sh
+$ scarb build
+```
 
-5. Create `devnet-acct.json` with the following content:
+6. You should see the following output:
+```sh
+   Compiling contract v0.1.0 (/.../contract/Scarb.toml)
+    Finished `dev` profile target(s) in 16 seconds
+```
+
+7. Create `devnet-acct.json` with the following content:
 
 ```json
 {
@@ -149,27 +159,27 @@ c33b",
   }
 }
 ```
-6. Export the private key to the environment variable.
+8. Export the private key to the environment variable.
 ```sh
 ~/contract$ export STARKNET_PRIVATE_KEY="0x71d7bb07b9a64f6f78ac4c816aff4da9"
 ```
-7. Declare the contract.
+9. Declare the contract.
 ```sh
 ~/contract$ starkli declare --watch --rpc http://localhost:5050 --account devnet-acct.json  target/dev/contract_Counter.contract_class.json 
 ```
 
-8. You should see the following output:
+10. You should see the following output:
 ```sh
 WARNING: using private key in plain text is highly insecure, and you should...
 ...
-Transaction 0x03bab0133a5a71cdff5c322a77c4372765df1c80874e579bea09e88db714f812 confirmed
+Transaction 0x060516c3d8c89327d5fd993e7deee37c2d0ce694111073a4f96d5c2f7d331f81 confirmed
 Class hash declared:
-0x06fbdea8714409dd889de2be7b76a801b0061df1f80548d977d5a91952229e52
+0x037075473c665d582edbb379dfc87167076c6c714416190dcc3db27dc54eb84b
 ```
 
 8. Deploy the contract.
 ```sh
-~/contract$ starkli deploy --watch --rpc http://localhost:5050 --account devnet-acct.json 0x06fbdea8714409dd889de2be7b76a801b0061df1f80548d977d5a91952229e52
+~/contract$ starkli deploy --watch --rpc http://localhost:5050 --account devnet-acct.json 0x037075473c665d582edbb379dfc87167076c6c714416190dcc3db27dc54eb84b
 ```
 
 9. You should see the following output:
@@ -177,7 +187,7 @@ Class hash declared:
 WARNING: using private key in plain text is highly insecure, and you should...
 ...
 Contract deployed:
-0x0418a43aeeeaa19e61d9d93a3fd82ecdde87ad01608f80078486fb377542ad85
+0x05e97cdfed436cc074def1b7f357cba6c76f61e85a3431a19cc29a3327676372
 ```
 10. Remember this contract address, you will need it to interact with the contract.
 
@@ -271,7 +281,7 @@ final provider = JsonRpcProvider(
     nodeUri: Uri.parse(
         'http://localhost:5050'));
 final contractAddress =
-    '0x0418a43aeeeaa19e61d9d93a3fd82ecdde87ad01608f80078486fb377542ad85';
+    '0x05e97cdfed436cc074def1b7f357cba6c76f61e85a3431a19cc29a3327676372';
 final secretAccountAddress =
     "0x64b48806902a367c8598f4f95c305e8c1a1acba5f082d294a43793113115691";
 final secretAccountPrivateKey =
@@ -297,7 +307,7 @@ Future<int> getCurrentCount() async {
   );
 }
 
-Future<String> increaseCounter() async {
+Future<void> increaseCounter() async {
   print('print increment');
   final response = await signeraccount.execute(functionCalls: [
     FunctionCall(
@@ -313,11 +323,10 @@ Future<String> increaseCounter() async {
   );
 
   print('printing increment TX : $txHash');
-  return txHash;
-  // return waitForAcceptance(transactionHash: txHash, provider: provider);
+  await waitForAcceptance(transactionHash: txHash, provider: provider);
 }
 
-Future<String> increaseCounterBy(String number) async {
+Future<void> increaseCounterBy(String number) async {
   print('print increment by ');
   final response = await signeraccount.execute(functionCalls: [
     FunctionCall(
@@ -333,11 +342,10 @@ Future<String> increaseCounterBy(String number) async {
   );
 
   print('printing incrementby amount TX : $txHash');
-  return txHash;
-  // return waitForAcceptance(transactionHash: txHash, provider: provider);
+  await waitForAcceptance(transactionHash: txHash, provider: provider);
 }
 
-Future<String> decreaseCounter() async {
+Future<void> decreaseCounter() async {
   print('decrementing.....');
   final response = await signeraccount.execute(functionCalls: [
     FunctionCall(
@@ -352,8 +360,7 @@ Future<String> decreaseCounter() async {
     error: (err) => throw Exception("Failed to execute"),
   );
   print('printing decrement TX : $txHash');
-  return txHash;
-  // return waitForAcceptance(transactionHash: txHash, provider: provider);
+  await waitForAcceptance(transactionHash: txHash, provider: provider);
 }
 ```
 
