Update image link
this is a fix for image load in https://starknetdart.dev/examples/starknet-counter

--- a/docs/examples/starknet-counter.mdx
+++ b/docs/examples/starknet-counter.mdx
@@ -487,6 +487,6 @@ Please choose one (or "q" to quit): 1
 ```
 9. A window should appear with the counter app where you can try calls and invoke functions to starknet.
 
-![Counter App](../assets/counter.png)
+![Counter App](/assets/counter.png)
 
 10. Congratulations! You have built your first Starknet Counter App.
