--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -11,11 +11,11 @@ The goal of this SDK is to be able to interact with StarkNet smart contracts in 
 
 | Feature        | State              | Version |
 | -------------- | ------------------ | ------- |
-| invoke         | ✅ | 0, 1    |
-| declare        | ✅ | 1, 2    |
-| deploy_account | ✅ | 1       |
+| invoke         | ✅ | 0, 1, 3    |
+| declare        | ✅ | 1, 2, 3    |
+| deploy_account | ✅ | 1, 3       |
 
-### Supported RPC methods for JSON RPC v0.3.0
+### Supported RPC methods for JSON RPC v0.7.1
 
 | Feature                                  | State              |
 | ---------------------------------------- | ------------------ |
