wallet_kit: apply some code rabbit recommendation

--- a/docs/examples/mobile-wallet.mdx
+++ b/docs/examples/mobile-wallet.mdx
@@ -253,7 +253,7 @@ Now you can run your app with `flutter run` and see your wallet in action! 💸
 
 ---
 
-Deploying an account require some ETH to pay transaction fees.
+Deploying an account requires some ETH to pay transaction fees.
 With `starknet-devnet`, you can mint some ETH to your account address with the following command:
 ```shell
 curl --silent -H 'Content-type: application/json' \
