fix: update wallet_app tutorial (#431)
* docs: add step about Android minimun SDK version required by `wallet_kit`

* feat(wallet_kit): add deploy account support

* fix(wallet_kit): refresh accounts ETH balance when wallet is expanded

* wallet_kit: fix analyze issue

* fix(wallet_kit): disable 'Send ETH' button when account is not deployed

* docs: add missing Scaffold in mobile wallet tutorial

* fix(wallet_kit): use `TokenSymbol.name` instead of  hardcoded string for account balances keys

* fix(wallet_kit): disable 'Deploy account' button if ETH account balance is not enough

* feat(wallet_kit): also refresh STRK balance when wallet is expanded

* docs: add info for Android biometric support and devnet minting in mobile-wallet tutorial

* fix(wallet_kit): check if account is deployed when wallet is expanded

* fix(wallet_kit): ensure private key is not null before signer creation

* wallet_kit: apply some code rabbit recommendation

* docs: fix typo

--- a/docs/examples/mobile-wallet.mdx
+++ b/docs/examples/mobile-wallet.mdx
@@ -23,16 +23,49 @@ flutter pub add wallet_kit hive_flutter hooks_riverpod flutter_dotenv
 4. Create a `.env` file in the root of your wallet_app project
 
 ```bash
-ACCOUNT_CLASS_HASH="0x05400e90f7e0ae78bd02c77cd75527280470e2fe19c54970dd79dc37a9d3645c"
+ACCOUNT_CLASS_HASH="0x061dac032f228abef9c6626f995015233097ae253a7f72d68552db02f2971b8f"
 RPC="http://127.0.0.1:5050/rpc"
 ```
 
-> If you are building for Android, use `RPC="http://10.0.2.2:5050/rpc"` instead.
+> Please note that `ACCOUNT_CLASS_HASH` must match the one used by your version of `starknet-devnet`, it's displayed at startup.
+Here is the value for `starknet-devnet 0.2.0`
+> ```
+> Predeployed accounts using class with hash: 0x061dac032f228abef9c6626f995015233097ae253a7f72d68552db02f2971b8f
+> ```
+
+> If you are running on another device that the host running `starknet-devnet`, you should use the external IP of your host running and start `starknet-devnet` with `--host 0.0.0.0` argument
+
 
 5. Add `.env` file in your `pubspec.yaml`
 ```yaml
   assets:
     - .env
+```
+
+6. Update Android minimun SDK version
+
+`secure_store` package used by `wallet_kit` require Android minimum SDK version set to at least 23, you need to modify `android/app/build.gradle`:
+```
+    defaultConfig {
+        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
+        applicationId = "com.example.wallet_app"
+        // You can update the following values to match your application needs.
+        // For more information, see: https://flutter.dev/to/review-gradle-config.
+        minSdk = 23
+        targetSdk = flutter.targetSdkVersion
+        versionCode = flutter.versionCode
+        versionName = flutter.versionName
+    }
+```
+
+7. Biometric support (optional)
+
+In order to use `Biometric` on Android, your `MainActivity` must inherit from `FlutterFragmentActivity` instead of `FlutterActity`.
+You need to modify your `MainActivity.kt` with:
+```kotlin
+import io.flutter.embedding.android.FlutterFragmentActivity
+
+class MainActivity: FlutterFragmentActivity()
 ```
 
 ## Let's write some code
@@ -174,21 +207,24 @@ class HomeScreen extends HookConsumerWidget {
 
   @override
   Widget build(BuildContext context, WidgetRef ref) {
-    return const Layout2(
-      children: [
-        SizedBox(height: 32),
-        Column(
-          crossAxisAlignment: CrossAxisAlignment.center,
-          mainAxisSize: MainAxisSize.min,
-          children: [
-            WalletSelector(),
-            AccountAddress(),
-          ],
-        ),
-        SizedBox(height: 32),
-        WalletBody(),
-        SendEthButton(),
-      ],
+    return const Scaffold(
+      body: Layout2(
+        children: [
+          SizedBox(height: 32),
+          Column(
+            crossAxisAlignment: CrossAxisAlignment.center,
+            mainAxisSize: MainAxisSize.min,
+            children: [
+              WalletSelector(),
+              AccountAddress(),
+              DeployAccountButton(),
+            ],
+          ),
+          SizedBox(height: 32),
+          WalletBody(),
+          SendEthButton(),
+        ],
+      ),
     );
   }
 }
@@ -215,3 +251,16 @@ class WalletApp extends HookConsumerWidget {
 ```
 
 Now you can run your app with `flutter run` and see your wallet in action! 💸
+
+---
+
+Deploying an account requires some ETH to pay transaction fees.
+With `starknet-devnet`, you can mint some ETH to your account address with the following command:
+```shell
+curl --silent -H 'Content-type: application/json' \
+  -X POST http://localhost:5050/mint \
+  -d '{"address": ""<YOUR_ACCOUNT_ADDRESS>"", "amount": 20000000000000000000, "unit": "WEI"}'
+```
+```console
+{"new_balance":"20000000000000000000","unit":"WEI","tx_hash":"0x9d2d26cef777c50b64475592e0df6e6c6012014e660f97bb37aaf5138aff54"}
+```
