docs: fix typo on mobile wallet example

--- a/docs/examples/mobile-wallet.mdx
+++ b/docs/examples/mobile-wallet.mdx
@@ -33,7 +33,7 @@ Here is the value for `starknet-devnet 0.2.0`
 > Predeployed accounts using class with hash: 0x061dac032f228abef9c6626f995015233097ae253a7f72d68552db02f2971b8f
 > ```
 
-> If you are running on another device that the host running `starknet-devnet`, you should use the external IP of your host running and start `starknet-devnet` with `--host 0.0.0.0` argument
+> If you are running on another device than the host running `starknet-devnet`, you should use the external IP of your host running and start `starknet-devnet` with `--host 0.0.0.0` argument
 
 
 5. Add `.env` file in your `pubspec.yaml`
